--- a/MyDemoProject/MyProducts.AdminSite/Views/Products/Details.cshtml
+++ b/MyDemoProject/MyProducts.AdminSite/Views/Products/Details.cshtml
@@ -65,6 +65,21 @@
         <dd>
             @Html.DisplayFor(model => model.Category.Category1)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Create_Date_Time)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Create_Date_Time)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Update_Data_time)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Update_Data_time)
+        </dd>
+
 
     </dl>
 </div>
